develop: Window and render
- Creation of the class "Game" in which the window, render and textures are initialized.
- Separate "Game Loop" function with standard rectangle drawing

--- a/Tic_Tac_Toe/Tic_Tac_Toe.vcxproj
+++ b/Tic_Tac_Toe/Tic_Tac_Toe.vcxproj
@@ -19,7 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\Texture.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\All_Included_libs.h" />
+    <ClInclude Include="Source\Game.h" />
+    <ClInclude Include="Source\Texture.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
